CSL: DTC source_list_url dependent on Type.
[#83436212]

--- a/spec/fixtures/screening_lists/dtc/results.yaml
+++ b/spec/fixtures/screening_lists/dtc/results.yaml
@@ -32,6 +32,6 @@
   :start_date: '1990-12-01'
   :federal_register_notice: 57 FR 40000
   :source: *1
-  :source_list_url: http://www.pmddtc.state.gov/compliance/debar.html
+  :source_list_url: http://www.pmddtc.state.gov/compliance/debar_admin.html
   :source_information_url: http://www.pmddtc.state.gov/compliance/debar_intro.html
   :id: 5989fe6f23c0b7b07aade5e4782acbbceb57be71
