--- a/spec/fixtures/market_researches/market_researches.yaml
+++ b/spec/fixtures/market_researches/market_researches.yaml
@@ -74,13 +74,13 @@
   :industries:
   - Aerospace & Defense
   - Agribusiness
-  - Apparel & Textiles
+  - Textiles & Apparel
   - Automotive & Ground Transportation
   - Chemicals, Petrochemicals & Composites
   - Construction, Building & Heavy Equipment
   - Consumer Goods & Home Furnishings
   - Energy & Mining
-  - Environmental Technologies
+  - Environmental Industries
   - Food Processing & Packaging
   - Health Technologies
   - Industrial Equipment & Supplies
