--- a/spec/fixtures/trade_events/ita/trade_events.yaml
+++ b/spec/fixtures/trade_events/ita/trade_events.yaml
@@ -19,11 +19,9 @@
     :phone: 972-3-519-8522
     :post: Tel Aviv
   :industries:
-  - Dental Eq.
-  - General Industrial Eq./Supplies
-  - Medical Eq.
-  - Plastics Materials/Resins
-  - Robotics
+  - Healthcare, Biotechnology & Pharmaceuticals
+  - Industrial Machinery & Equipment
+  - Industrial Materials
   :venues:
   - :city: Tel Aviv
     :country: IL
@@ -93,12 +91,9 @@
     :phone: "(234-1) 460-3400 ext 3498"
     :post: 
   :industries:
-  - Commercial Fishing Eq.
-  - Commercial Vessel/Eq. (Non-Fisheries)
-  - Electronic Components
-  - Operations/Maintenance Services
-  - Pleasure Boats/Accessories
-  - Port/Shipbuilding Eq.
+  - Marine Industries
+  - Industrial Machinery & Equipment
+  - Business & Professional Services
   :venues:
   - :city: New Orleans, Louisiana
     :country: US
@@ -158,8 +153,8 @@
     :phone: 312-781-5180
     :post: Messe Dusseldorf North America
   :industries:
-  - Laboratory Scientific Instruments
-  - Medical Eq.
+  - Industrial Machinery & Equipment
+  - Healthcare, Biotechnology & Pharmaceuticals
   :venues:
   - :city: São Paulo
     :country: BR
