--- a/spec/fixtures/trade_events/ustda/expected_ustda_events.yaml
+++ b/spec/fixtures/trade_events/ustda/expected_ustda_events.yaml
@@ -97,7 +97,7 @@
     :venue: ''
   :event_type: ''
   :industries:
-  - Aviation Services
+  - Aerospace & Defense
   :contacts:
   - :first_name: AJ
     :last_name: Bownas
@@ -214,7 +214,7 @@
     :venue: ''
   :event_type: ''
   :industries:
-  - Aviation Services
+  - Aerospace & Defense
   :contacts:
   - :first_name: Ian
     :last_name: Christianson
