Developers see ITA industry classification in Market Research Library
[#79335014]

--- a/spec/fixtures/market_researches/market_researches.yaml
+++ b/spec/fixtures/market_researches/market_researches.yaml
@@ -80,7 +80,7 @@
   - Construction, Building & Heavy Equipment
   - Consumer Goods & Home Furnishings
   - Energy & Mining
-  - Environmental Technologies
+  - Environmental Industries
   - Food Processing & Packaging
   - Health Technologies
   - Industrial Equipment & Supplies
