--- a/data/country_commercial_guides/yaml/colombia.yaml
+++ b/data/country_commercial_guides/yaml/colombia.yaml
@@ -4,6 +4,7 @@ title: 'Country Commercial Guides - Colombia'
 country: 'Colombia'
 pdf_url: 'http://www.buyusainfo.net/docs/x_9121404.pdf'
 text_path: 'http://govwizely.github.io/ccg/colombia/'
+break_chapter: 'chap4'
 entries:
   - chapter: 'Chapter 1: Doing Business In Colombia'
     section: ''
