CSL: Part561 -> 561; Part561 and ISA source_info_urls
Based on comments on #81962978.

--- a/spec/fixtures/screening_lists/isa/results.yaml
+++ b/spec/fixtures/screening_lists/isa/results.yaml
@@ -17,7 +17,7 @@
     :full_name: Non-SDN Iranian Sanctions Act List (NS-ISA) - Treasury Department
     :code: ISA
   :source_list_url:
-  :source_information_url: http://www.treasury.gov/resource-center/sanctions/programs/pages/iran.aspx
+  :source_information_url: http://www.treasury.gov/resource-center/sanctions/programs/pages/iran.aspx#isa
   :name: KUO OIL (S) PTE. LIMITED
   :type: Entity
   :alt_names: []
@@ -55,7 +55,7 @@
   :id: '13043'
   :source: *1
   :source_list_url:
-  :source_information_url: http://www.treasury.gov/resource-center/sanctions/programs/pages/iran.aspx
+  :source_information_url: http://www.treasury.gov/resource-center/sanctions/programs/pages/iran.aspx#isa
   :name: FAL OIL COMPANY LTD.
   :type: Entity
   :alt_names: []
