--- a/spec/fixtures/screening_lists/part561/results.yaml
+++ b/spec/fixtures/screening_lists/part561/results.yaml
@@ -13,9 +13,9 @@
   :id: '15268'
   :source:
     :full_name: Part 561 List (561) - Treasury Department
-    :code: PART561
+    :code: "561"
   :source_list_url:
-  :source_information_url: http://www.treasury.gov/resource-center/sanctions/programs/pages/iran.aspx
+  :source_information_url: http://www.treasury.gov/resource-center/sanctions/programs/pages/iran.aspx#part561
   :name: BANK OF KUNLUN CO LTD
   :type: Entity
   :alt_names:
