--- a/spec/fixtures/trade_leads/fbopen/full_source_results.yaml
+++ b/spec/fixtures/trade_leads/fbopen/full_source_results.yaml
@@ -1,4 +1,33 @@
 ---
+- :publish_date: 2015-02-08
+  :procurement_organization: Defense Logistics Agency
+  :procurement_office: DLA Acquisition Locations
+  :procurement_organization_address: DLA Land and Maritime - BSM
+  :classification_code: '61'
+  :industry: '331318'
+  :procurement_office_address: '331318'
+  :title: 61--CABLE,POWER,ELECTRI
+  :contract_number: SPE7M815Q0425
+  :contact: Questions regarding this solicitation should be emailed to the buyer listed
+    in block 5 of the solicitation document which can be found under the Additional
+    Information link.If the Additional Information link does not work, please go to
+    https://www.dibbs.bsm.dla.mil/Solicitations/ and type the solicitation number
+    in the Global Search box.
+  :description: 'Proposed procurement for NSN 6145012252161 CABLE,POWER,ELECTRI:Line
+    0001 Qty 2600. UI FT Deliver To: W1BG DLA DISTRIBUTION By: 0080 DAYS ADOThis is
+    a qualified products list (QPL) item. The solicitation is an RFQ and will be available
+    at the link provided in this notice. Hard copies of this solicitation are not
+    available. Military Specifications and Standards may be retrieved, or ordered,
+    electronically.All responsible sources may submit a quote which, if timely received,
+    shall be considered.Quotes may be submitted electronically.'
+  :url: https://www.fbo.gov/spg/DLA/J3/DSCC-BSM/SPE7M815Q0425/listing.html
+  :competitive_procurement_strategy: Total Small Business
+  :specific_location: AF
+  :specific_address: 
+  :notice_type: COMBINE
+  :end_date: 2015-03-21
+  :source: FBO
+  :id: SPE7M815Q0425
 - :publish_date: 
   :procurement_organization: Department of the Army
   :procurement_office: CENTCOM - Joint Theater Support Contracting Command
@@ -35,7 +64,7 @@
   :specific_location: AF
   :specific_address: RCC Phoenix , APO AE
   :notice_type: COMBINE
-  :end_date: 3015-02-05
+  :end_date: 2015-04-05
   :source: FBO
   :id: W56KJD-15-T-0032
 - :publish_date: 2015-02-08
@@ -74,7 +103,7 @@
   :specific_location: AF
   :specific_address: RCC Phoenix , APO AE
   :notice_type: MOD
-  :end_date: 3015-02-09
+  :end_date: 2015-02-09
   :source: FBO
   :id: W56KJD-15-T-0032
 - :publish_date: 
