--- a/spec/importers/screening_list/uvl/results.yaml
+++ b/spec/importers/screening_list/uvl/results.yaml
@@ -8,11 +8,19 @@
   :source_information_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/unverified-list
   :addresses:
   - :address: Room 2135, Jingxin Building A, No Dong San Huan North Road, Beijing
-    :city: 
-    :state: 
-    :postal_code: 
+    :city:
+    :state:
+    :postal_code:
     :country: CN
   :alt_names: []
+  :name_idx: China National Plant Import Export Co
+  :rev_name: Co Export Import Plant National China
+  :trim_name: ChinaNationalPlantImportExportCo
+  :trim_rev_name: CoExportImportPlantNationalChina
+  :name_no_common: China National Plant Import Export
+  :rev_name_no_common: Export Import Plant National China
+  :trim_name_no_common: ChinaNationalPlantImportExport
+  :trim_rev_name_no_common: ExportImportPlantNationalChina
 - :name: Brilliance Technology Ltd
   :id: cc91dc115ff25e9f2e3cab1b9d8adf75f5956982
   :source: *1
@@ -20,47 +28,70 @@
   :source_information_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/unverified-list
   :addresses:
   - :address: Flat A, 11/F, Adolfo Mansion, 114-116 Austin Road, Tsim Sha Tsui, Kowloon
-    :city: 
-    :state: 
-    :postal_code: 
+    :city:
+    :state:
+    :postal_code:
     :country: HK
   - :address: Rm 1203, 12/F, Hip Kwan Commercial Bldg, 38 Pitt Street, Yau Ma Tei
-    :city: 
-    :state: 
-    :postal_code: 
+    :city:
+    :state:
+    :postal_code:
     :country: HK
   :alt_names: []
+  :name_idx: Brilliance Technology Ltd
+  :rev_name: Ltd Technology Brilliance
+  :trim_name: BrillianceTechnologyLtd
+  :trim_rev_name: LtdTechnologyBrilliance
+  :name_no_common: Brilliance Technology
+  :rev_name_no_common: Technology Brilliance
+  :trim_name_no_common: BrillianceTechnology
+  :trim_rev_name_no_common: TechnologyBrilliance
 - :name: Dynasense Photonics Co., Limited
   :id: 91b38427499bf36988a61096f665301b890c9ec2
   :source: *1
   :source_list_url: http://www.bis.doc.gov/enforcement/unverifiedlist/unverified_parties.html
   :source_information_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/unverified-list
   :addresses:
-  - :address: Unit 2209, 22/F, Wu Chung House, 213 Queen's Road East, Wanchai
-    :city: 
-    :state: 
-    :postal_code: 
+  - :address: "Unit 2209, 22/F, Wu Chung House, 213 Queen's Road East, Wanchai"
+    :city:
+    :state:
+    :postal_code:
     :country: HK
   :alt_names: []
+  :name_idx: Dynasense Photonics Co Limited
+  :rev_name: Limited Co Photonics Dynasense
+  :trim_name: DynasensePhotonicsCoLimited
+  :trim_rev_name: LimitedCoPhotonicsDynasense
+  :name_no_common: Dynasense Photonics
+  :rev_name_no_common: Photonics Dynasense
+  :trim_name_no_common: DynasensePhotonics
+  :trim_rev_name_no_common: PhotonicsDynasense
 - :name: Hi-Shine Technology (HK) Limited
   :id: 6e18b2585a002248ecb071d5fa8b26cdfd2f4144
   :source: *1
   :source_list_url: http://www.bis.doc.gov/enforcement/unverifiedlist/unverified_parties.html
   :source_information_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/unverified-list
   :addresses:
-  - :address: Flat D12, 11/F, King Yip Factory Bldg, 59 King Yip Street, Kwun Tong,
-      Kowloon
-    :city: 
-    :state: 
-    :postal_code: 
+  - :address: Flat D12, 11/F, King Yip Factory Bldg, 59 King Yip Street, Kwun Tong, Kowloon
+    :city:
+    :state:
+    :postal_code:
     :country: HK
   - :address: Room 603, 6/F, Hang Pont Commercial Building, 31 Tonking Street, Cheung
       Sha Wan, Kowloon
-    :city: 
-    :state: 
-    :postal_code: 
+    :city:
+    :state:
+    :postal_code:
     :country: HK
   :alt_names: []
+  :name_idx: Hi Shine Technology HK Limited
+  :rev_name: Limited HK Technology Shine Hi
+  :trim_name: HiShineTechnologyHKLimited
+  :trim_rev_name: LimitedHKTechnologyShineHi
+  :name_no_common: Hi Shine Technology HK
+  :rev_name_no_common: HK Technology Shine Hi
+  :trim_name_no_common: HiShineTechnologyHK
+  :trim_rev_name_no_common: HKTechnologyShineHi
 - :name: Hong Kong Haimao Info-Tec Development Co Ltd
   :id: b7b7b4366f4441a70c163fe63706375ac2d4d520
   :source: *1
@@ -68,11 +99,19 @@
   :source_information_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/unverified-list
   :addresses:
   - :address: Rm 1013B, Well Fung Ind. Center, Ta Chuen Ping Street, Kwai Chung
-    :city: 
-    :state: 
-    :postal_code: 
+    :city:
+    :state:
+    :postal_code:
     :country: HK
   :alt_names: []
+  :name_idx: Hong Kong Haimao Info Tec Development Co Ltd
+  :rev_name: Ltd Co Development Tec Info Haimao Kong Hong
+  :trim_name: HongKongHaimaoInfoTecDevelopmentCoLtd
+  :trim_rev_name: LtdCoDevelopmentTecInfoHaimaoKongHong
+  :name_no_common: Hong Kong Haimao Info Tec Development
+  :rev_name_no_common: Development Tec Info Haimao Kong Hong
+  :trim_name_no_common: HongKongHaimaoInfoTecDevelopment
+  :trim_rev_name_no_common: DevelopmentTecInfoHaimaoKongHong
 - :name: Lianqi (HK) Electronics Co Ltd
   :id: 93d5f755bf946ab838126ffa4cee213d6e55e806
   :source: *1
@@ -80,11 +119,19 @@
   :source_information_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/unverified-list
   :addresses:
   - :address: Unit N, 3/F, Hopewell House, 175 Hip Wo Street, KwunTong, Kowloon
-    :city: 
-    :state: 
-    :postal_code: 
+    :city:
+    :state:
+    :postal_code:
     :country: HK
   :alt_names: []
+  :name_idx: Lianqi HK Electronics Co Ltd
+  :rev_name: Ltd Co Electronics HK Lianqi
+  :trim_name: LianqiHKElectronicsCoLtd
+  :trim_rev_name: LtdCoElectronicsHKLianqi
+  :name_no_common: Lianqi HK Electronics
+  :rev_name_no_common: Electronics HK Lianqi
+  :trim_name_no_common: LianqiHKElectronics
+  :trim_rev_name_no_common: ElectronicsHKLianqi
 - :name: Lion Chip Electronics Ltd
   :id: f117b1dab0d802e5f6c3a02113f67f3f72893a6e
   :source: *1
@@ -92,11 +139,19 @@
   :source_information_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/unverified-list
   :addresses:
   - :address: Unit N, 3/F, Hopewell House, 175 Hip Wo Street, KwunTong, Kowloon
-    :city: 
-    :state: 
-    :postal_code: 
+    :city:
+    :state:
+    :postal_code:
     :country: HK
   :alt_names: []
+  :name_idx: Lion Chip Electronics Ltd
+  :rev_name: Ltd Electronics Chip Lion
+  :trim_name: LionChipElectronicsLtd
+  :trim_rev_name: LtdElectronicsChipLion
+  :name_no_common: Lion Chip Electronics
+  :rev_name_no_common: Electronics Chip Lion
+  :trim_name_no_common: LionChipElectronics
+  :trim_rev_name_no_common: ElectronicsChipLion
 - :name: Security 2 Business Academy
   :id: 5b5a164dd0e4ca3acb6397dbeb2d5713c4f13f90
   :source: *1
@@ -104,16 +159,20 @@
   :source_information_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/unverified-list
   :addresses:
   - :address: Deguninskaya Street 10, Moscow
-    :city: 
-    :state: 
-    :postal_code: 
+    :city:
+    :state:
+    :postal_code:
     :country: RU
   - :address: Novoslobodskaya Str. 14/19, Moscow
-    :city: 
-    :state: 
-    :postal_code: 
+    :city:
+    :state:
+    :postal_code:
     :country: RU
   :alt_names: []
+  :name_idx: Security 2 Business Academy
+  :rev_name: Academy Business 2 Security
+  :trim_name: Security2BusinessAcademy
+  :trim_rev_name: AcademyBusiness2Security
 - :name: S2BA
   :id: 8cc44eee211bbc678fa468cfa5d44065b4c5d749
   :source: *1
@@ -121,16 +180,20 @@
   :source_information_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/unverified-list
   :addresses:
   - :address: Deguninskaya Street 10, Moscow
-    :city: 
-    :state: 
-    :postal_code: 
+    :city:
+    :state:
+    :postal_code:
     :country: RU
   - :address: Novoslobodskaya Str. 14/19, Moscow
-    :city: 
-    :state: 
-    :postal_code: 
+    :city:
+    :state:
+    :postal_code:
     :country: RU
   :alt_names: []
+  :name_idx: S2BA
+  :rev_name: S2BA
+  :trim_name: S2BA
+  :trim_rev_name: S2BA
 - :name: Academy of Business Security
   :id: b5f1189bc3a5d4a969a9980d946f30c9dd74ea84
   :source: *1
@@ -138,16 +201,20 @@
   :source_information_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/unverified-list
   :addresses:
   - :address: Deguninskaya Street 10, Moscow
-    :city: 
-    :state: 
-    :postal_code: 
+    :city:
+    :state:
+    :postal_code:
     :country: RU
   - :address: Novoslobodskaya Str. 14/19, Moscow
-    :city: 
-    :state: 
-    :postal_code: 
+    :city:
+    :state:
+    :postal_code:
     :country: RU
   :alt_names: []
+  :name_idx: Academy of Business Security
+  :rev_name: Security Business of Academy
+  :trim_name: AcademyofBusinessSecurity
+  :trim_rev_name: SecurityBusinessofAcademy
 - :name: T2BA
   :id: c46ba5ffd6da15f8e524b58f59123894bb63e2f8
   :source: *1
@@ -155,11 +222,15 @@
   :source_information_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/unverified-list
   :addresses:
   - :address: Deguninskaya Street 30, Moscow, Russia
-    :city: 
-    :state: 
-    :postal_code: 
+    :city:
+    :state:
+    :postal_code:
     :country: RU
   :alt_names: []
+  :name_idx: T2BA
+  :rev_name: T2BA
+  :trim_name: T2BA
+  :trim_rev_name: T2BA
 - :name: Training 2 Business Academy, a.k.a. T2BA, a.k.a. Academy of Business Training
   :id: 385c6ccf9a8683027c6a981a8467a1ee357a4ee2
   :source: *1
@@ -167,16 +238,37 @@
   :source_information_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/unverified-list
   :addresses:
   - :address: Deguninskaya Street 20, Moscow, Russia
-    :city: 
-    :state: 
-    :postal_code: 
+    :city:
+    :state:
+    :postal_code:
     :country: RU
   - :address: Novoslobodskaya Str. 24/29, Moscow, Russia
-    :city: 
-    :state: 
-    :postal_code: 
+    :city:
+    :state:
+    :postal_code:
     :country: RU
   :alt_names:
   - Training 2 Business Academy
   - T2BA
   - Academy of Business Training
+  :name_idx:
+   Training 2 Business Academy a k a T2BA a k a Academy of Business Training
+  :rev_name: Training Business of Academy a k a T2BA a k a Academy Business 2 Training
+  :trim_name: Training2BusinessAcademyakaT2BAakaAcademyofBusinessTraining
+  :trim_rev_name: TrainingBusinessofAcademyakaT2BAakaAcademyBusiness2Training
+  :alt_names_idx:
+  - Training 2 Business Academy
+  - T2BA
+  - Academy of Business Training
+  :rev_alt_names:
+  - Academy Business 2 Training
+  - T2BA
+  - Training Business of Academy
+  :trim_alt_names:
+  - Training2BusinessAcademy
+  - T2BA
+  - AcademyofBusinessTraining
+  :trim_rev_alt_names:
+  - AcademyBusiness2Training
+  - T2BA
+  - TrainingBusinessofAcademy
