--- a/spec/fixtures/screening_lists/isa/results.yaml
+++ b/spec/fixtures/screening_lists/isa/results.yaml
@@ -19,6 +19,7 @@
   :source_list_url:
   :source_information_url: http://www.treasury.gov/resource-center/sanctions/programs/pages/iran.aspx#isa
   :name: KUO OIL (S) PTE. LIMITED
+  :phonetic_names: ["KUO OIL (S) PTE. LIMITED"]
   :type: Entity
   :alt_names: []
   :programs:
@@ -57,6 +58,7 @@
   :source_list_url:
   :source_information_url: http://www.treasury.gov/resource-center/sanctions/programs/pages/iran.aspx#isa
   :name: FAL OIL COMPANY LTD.
+  :phonetic_names: ["FAL OIL COMPANY LTD."]
   :type: Entity
   :alt_names: []
   :programs:
