--- a/spec/fixtures/screening_lists/plc/results.yaml
+++ b/spec/fixtures/screening_lists/plc/results.yaml
@@ -15,6 +15,7 @@
   :source_list_url: 
   :source_information_url: http://www.treasury.gov/resource-center/sanctions/Terrorism-Proliferation-Narcotics/Pages/index.aspx
   :name: HANIYA, Ismail Abdul Salah
+  :phonetic_names: ["HANIYA, Ismail Abdul Salah"]
   :type: Individual
   :alt_names:
   - HANIYA, Ismail
@@ -43,6 +44,7 @@
   :source_list_url: 
   :source_information_url: http://www.treasury.gov/resource-center/sanctions/Terrorism-Proliferation-Narcotics/Pages/index.aspx
   :name: QFEISHEH, Hatem
+  :phonetic_names: ["QFEISHEH, Hatem"]
   :type: Individual
   :alt_names:
   - KAFEESHEH, Hatem Rabah
@@ -71,6 +73,7 @@
   :source_list_url: 
   :source_information_url: http://www.treasury.gov/resource-center/sanctions/Terrorism-Proliferation-Narcotics/Pages/index.aspx
   :name: YAHIA, Khaled Abed
+  :phonetic_names: ["YAHIA, Khaled Abed"]
   :type: Individual
   :alt_names:
   - YEHIA, Khaled Said
@@ -102,6 +105,7 @@
   :source_list_url: 
   :source_information_url: http://www.treasury.gov/resource-center/sanctions/Terrorism-Proliferation-Narcotics/Pages/index.aspx
   :name: SALEH, Jamal
+  :phonetic_names: ["SALEH, Jamal"]
   :type: Individual
   :alt_names:
   - NASSER, Jamal Talab Mohammad Saleh
@@ -130,6 +134,7 @@
   :source_list_url: 
   :source_information_url: http://www.treasury.gov/resource-center/sanctions/Terrorism-Proliferation-Narcotics/Pages/index.aspx
   :name: SHIHAB, Mohammed
+  :phonetic_names: ["SHIHAB, Mohammed"]
   :type: Individual
   :alt_names:
   - SHEHAB, Mohamed Abed Hadi Rahman
@@ -156,6 +161,7 @@
   :source_list_url: 
   :source_information_url: http://www.treasury.gov/resource-center/sanctions/Terrorism-Proliferation-Narcotics/Pages/index.aspx
   :name: JARRAR, Khaledah
+  :phonetic_names: ["JARRAR, Khaledah"]
   :type: Individual
   :alt_names: []
   :programs:
