--- a/spec/fixtures/screening_lists/part561/results.yaml
+++ b/spec/fixtures/screening_lists/part561/results.yaml
@@ -17,6 +17,7 @@
   :source_list_url:
   :source_information_url: http://www.treasury.gov/resource-center/sanctions/programs/pages/iran.aspx#part561
   :name: BANK OF KUNLUN CO LTD
+  :phonetic_names: ["BANK OF KUNLUN CO LTD"]
   :type: Entity
   :alt_names:
   - KARAMAY URBAN CREDIT COOPERATIVES
