--- a/spec/fixtures/screening_lists/uvl/results.yaml
+++ b/spec/fixtures/screening_lists/uvl/results.yaml
@@ -13,6 +13,7 @@
     :postal_code: 
     :country: CN
   :alt_names: []
+  :phonetic_names: [China National Plant Import/Export Co.]
 - :name: Brilliance Technology Ltd
   :id: cc91dc115ff25e9f2e3cab1b9d8adf75f5956982
   :source: *1
@@ -20,16 +21,17 @@
   :source_information_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/unverified-list
   :addresses:
   - :address: Flat A, 11/F, Adolfo Mansion, 114-116 Austin Road, Tsim Sha Tsui, Kowloon
-    :city: 
-    :state: 
-    :postal_code: 
+    :city:
+    :state:
+    :postal_code:
     :country: HK
   - :address: Rm 1203, 12/F, Hip Kwan Commercial Bldg, 38 Pitt Street, Yau Ma Tei
-    :city: 
-    :state: 
-    :postal_code: 
+    :city:
+    :state:
+    :postal_code:
     :country: HK
   :alt_names: []
+  :phonetic_names: [Brilliance Technology Ltd]
 - :name: Dynasense Photonics Co., Limited
   :id: 91b38427499bf36988a61096f665301b890c9ec2
   :source: *1
@@ -37,11 +39,12 @@
   :source_information_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/unverified-list
   :addresses:
   - :address: Unit 2209, 22/F, Wu Chung House, 213 Queen's Road East, Wanchai
-    :city: 
-    :state: 
-    :postal_code: 
+    :city:
+    :state:
+    :postal_code:
     :country: HK
   :alt_names: []
+  :phonetic_names: ["Dynasense Photonics Co., Limited"]
 - :name: Hi-Shine Technology (HK) Limited
   :id: 6e18b2585a002248ecb071d5fa8b26cdfd2f4144
   :source: *1
@@ -50,17 +53,18 @@
   :addresses:
   - :address: Flat D12, 11/F, King Yip Factory Bldg, 59 King Yip Street, Kwun Tong,
       Kowloon
-    :city: 
-    :state: 
-    :postal_code: 
+    :city:
+    :state:
+    :postal_code:
     :country: HK
   - :address: Room 603, 6/F, Hang Pont Commercial Building, 31 Tonking Street, Cheung
       Sha Wan, Kowloon
-    :city: 
-    :state: 
-    :postal_code: 
+    :city:
+    :state:
+    :postal_code:
     :country: HK
   :alt_names: []
+  :phonetic_names: [Hi-Shine Technology (HK) Limited]
 - :name: Hong Kong Haimao Info-Tec Development Co Ltd
   :id: b7b7b4366f4441a70c163fe63706375ac2d4d520
   :source: *1
@@ -68,11 +72,12 @@
   :source_information_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/unverified-list
   :addresses:
   - :address: Rm 1013B, Well Fung Ind. Center, Ta Chuen Ping Street, Kwai Chung
-    :city: 
-    :state: 
-    :postal_code: 
+    :city:
+    :state:
+    :postal_code:
     :country: HK
   :alt_names: []
+  :phonetic_names: [Hong Kong Haimao Info-Tec Development Co Ltd]
 - :name: Lianqi (HK) Electronics Co Ltd
   :id: 93d5f755bf946ab838126ffa4cee213d6e55e806
   :source: *1
@@ -80,11 +85,12 @@
   :source_information_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/unverified-list
   :addresses:
   - :address: Unit N, 3/F, Hopewell House, 175 Hip Wo Street, KwunTong, Kowloon
-    :city: 
-    :state: 
-    :postal_code: 
+    :city:
+    :state:
+    :postal_code:
     :country: HK
   :alt_names: []
+  :phonetic_names: [Lianqi (HK) Electronics Co Ltd]
 - :name: Lion Chip Electronics Ltd
   :id: f117b1dab0d802e5f6c3a02113f67f3f72893a6e
   :source: *1
@@ -92,11 +98,12 @@
   :source_information_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/unverified-list
   :addresses:
   - :address: Unit N, 3/F, Hopewell House, 175 Hip Wo Street, KwunTong, Kowloon
-    :city: 
-    :state: 
-    :postal_code: 
+    :city:
+    :state:
+    :postal_code:
     :country: HK
   :alt_names: []
+  :phonetic_names: [Lion Chip Electronics Ltd]
 - :name: Security 2 Business Academy
   :id: 5b5a164dd0e4ca3acb6397dbeb2d5713c4f13f90
   :source: *1
@@ -104,16 +111,17 @@
   :source_information_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/unverified-list
   :addresses:
   - :address: Deguninskaya Street 10, Moscow
-    :city: 
-    :state: 
-    :postal_code: 
+    :city:
+    :state:
+    :postal_code:
     :country: RU
   - :address: Novoslobodskaya Str. 14/19, Moscow
-    :city: 
-    :state: 
-    :postal_code: 
+    :city:
+    :state:
+    :postal_code:
     :country: RU
   :alt_names: []
+  :phonetic_names: [Security 2 Business Academy]
 - :name: S2BA
   :id: 8cc44eee211bbc678fa468cfa5d44065b4c5d749
   :source: *1
@@ -121,16 +129,17 @@
   :source_information_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/unverified-list
   :addresses:
   - :address: Deguninskaya Street 10, Moscow
-    :city: 
-    :state: 
-    :postal_code: 
+    :city:
+    :state:
+    :postal_code:
     :country: RU
   - :address: Novoslobodskaya Str. 14/19, Moscow
-    :city: 
-    :state: 
-    :postal_code: 
+    :city:
+    :state:
+    :postal_code:
     :country: RU
   :alt_names: []
+  :phonetic_names: [S2BA]
 - :name: Academy of Business Security
   :id: b5f1189bc3a5d4a969a9980d946f30c9dd74ea84
   :source: *1
@@ -138,16 +147,17 @@
   :source_information_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/unverified-list
   :addresses:
   - :address: Deguninskaya Street 10, Moscow
-    :city: 
-    :state: 
-    :postal_code: 
+    :city:
+    :state:
+    :postal_code:
     :country: RU
   - :address: Novoslobodskaya Str. 14/19, Moscow
-    :city: 
-    :state: 
-    :postal_code: 
+    :city:
+    :state:
+    :postal_code:
     :country: RU
   :alt_names: []
+  :phonetic_names: [Academy of Business Security]
 - :name: T2BA
   :id: c46ba5ffd6da15f8e524b58f59123894bb63e2f8
   :source: *1
@@ -160,6 +170,7 @@
     :postal_code: 
     :country: RU
   :alt_names: []
+  :phonetic_names: [T2BA]
 - :name: Training 2 Business Academy, a.k.a. T2BA, a.k.a. Academy of Business Training
   :id: 385c6ccf9a8683027c6a981a8467a1ee357a4ee2
   :source: *1
@@ -180,3 +191,8 @@
   - Training 2 Business Academy
   - T2BA
   - Academy of Business Training
+  :phonetic_names: [
+  "Training 2 Business Academy, a.k.a. T2BA, a.k.a. Academy of Business Training",
+  "Training 2 Business Academy",
+  "T2BA",
+  "Academy of Business Training"]
