--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,10 @@ rvm:
 before_install:
   - wget https://download.elastic.co/elasticsearch/elasticsearch/elasticsearch-1.2.1.deb && sudo dpkg -i --force-confnew elasticsearch-1.2.1.deb && true
   - sudo service elasticsearch start
-
+script:
+  - bin/rake about
+  - bin/rspec
+  - bin/rake
 addons:
  code_climate:
    repo_token: b2be59fc94d6de5b889a16c640227b42d40d8aa21df90fad79dd70f2687d630c
