--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,6 @@ before_install:
 addons:
  code_climate:
    repo_token: b2be59fc94d6de5b889a16c640227b42d40d8aa21df90fad79dd70f2687d630c
+
+notifications:
+  slack: govwizely:R9Nhshn0NO7eRh4ThXaMKqWw
