Remove bad character from ISN source.

--- a/spec/importers/screening_list/isn/results.yaml
+++ b/spec/importers/screening_list/isn/results.yaml
@@ -1,9 +1,9 @@
 ---
-- :name: 7thÿof Tir
+- :name: 7th of Tir
   :federal_register_notice: Vol. 74, No. 8, 01/13/09
   :start_date: '2008-07-08'
   :end_date: 
-  :id: 66f288a3f90da32a029c4a46b6d7123ec42db4c3
+  :id: 4b83e057686c5ebce3c50f5f48fb72405755f954
   :source: &1
     :full_name: Nonproliferation Sanctions (ISN) - State Department
     :code: ISN
